# Juerka

./: CMakeLists.txt  README.md
Juerka/: CMakeLists.txt
Juerka/CommonNet/: Common.h  NetworkGroup.cpp  NetworkGroup.h  SerialNet.cpp  SerialNet.h
Juerka/Main/: main.cpp
Juerka/Utility/: Logger.cpp  Logger.h  TimeRecorder.hpp  WeightLogger.cpp  WeightLogger.h
Juerka/test/: main.cpp
